# JumpRopeStick

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/bluepad32/bt/: uni_bt_bredr.c  uni_bt_le.c
components/bluepad32/parser/: uni_hid_parser_android.c
docs/: Positions.md  architecture.md  controllers.md  hardware.md  robstride_motors.md
main/: CMakeLists.txt  config.h  controller_manager.cpp  controller_manager.h  debug_log.cpp  debug_log.h  display_manager.cpp  display_manager.h  drive_manager.cpp  drive_manager.h  main.c  motor_manager.cpp  motor_manager.h  robstride_protocol.h  settings_manager.cpp  settings_manager.h  sketch.cpp  web_config.h  web_log.h  web_server.cpp  web_server.h  web_ui.h  wifi_manager.cpp  wifi_manager.h
